add rubin config

--- a/jffsX-utils/Makemodule.am
+++ b/jffsX-utils/Makemodule.am
@@ -5,7 +5,7 @@ mkfs_jffs2_SOURCES = \
 	jffsX-utils/rbtree.c \
 	jffsX-utils/compr.c \
 	jffsX-utils/compr_rtime.c \
-	jffsX-utils/compr.h \
+	jffsX-utils/compr_rubin.c \
 	jffsX-utils/rbtree.h \
 	jffsX-utils/summary.h \
 	include/linux/jffs2.h \
